# open-saves

./: .bazelrc  .dockerignore  .gitignore  BUILD.bazel  CMakeLists.txt  Dockerfile  Makefile  README.md  WORKSPACE  build.sh  cloudbuild.yaml  cloudbuild_push_main.yaml  cloudbuild_tag_release.yaml  cloudbuild_update_images.yaml  doc.go  dump.rdb  go.mod  go.sum  go_repositories.bzl  repositories.bzl
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
api/: BUILD.bazel  CMakeLists.txt  README.md  gen.go  gengateway.sh  genproto.sh  open-saves.proto  open_saves.pb.go  open_saves.proto  open_saves_grpc.pb.go  triton.pb.go  triton.pb.gw.go  triton.proto  triton.swagger.json
bootstrap/proto/: README.md
client/: README.md
cmd/: BUILD.bazel  main.go
cmd/collector/: main.go
cmd/collector/async/: main.go
cmd/server/: main.go
cmd/triton/: main.go
configs/: service.yaml
deploy/datastore/: index.yaml
deploy/gke/: collector.yaml  deployment.yaml  service.yaml
deploy/systemd/: open-saves-gc.service  open-saves-gc.timer
deploy/terraform/gcp/: blobstore.tf  datastore.tf  storage.tf
docs/: contributing.md  deploying-to-gke.md  deploying.md  development.md  key-terms.md  load-testing.md  overview.md  reference.md
examples/: CMakeLists.txt
examples/cc-grpc-client/: BUILD.bazel  CMakeLists.txt  main.cc
examples/datastore/: index.yaml
examples/demo/: demo.go
examples/demo-game/: go.mod  go.sum
examples/grpc-all/: main.go
examples/grpc-client/: create_store.go  main.go
examples/load-tester/: main.go
examples/load-tester/load/: load.go
examples/load-tester/load/getrecord/: getrecord.go
examples/load-tester/load/opensaves/: ops.go  ops_test.go
examples/load-tester/load/ping/: ping.go
examples/load-tester/load/utils/: utils.go
internal/app/blob/: blob.go  gcs.go  gcs_test.go
internal/app/collector/: collector.go  collector_test.go
internal/app/collector/async/: collector.go  collector_test.go  server.go
internal/app/server/: BUILD.bazel  open-saves.go  open-saves_test.go  open_saves.go  open_saves_test.go  server.go  triton.go  triton_test.go
internal/config/: BUILD.bazel  config.go  view.go
internal/logging/: BUILD.bazel  logging.go
internal/pkg/blob/: blob.go  gcs.go  gcs_test.go
internal/pkg/cache/: cache.go  cache_test.go  redis.go  redis_test.go
internal/pkg/cache/redis/: redis.go  redis_test.go
internal/pkg/cmd/: env.go  env_test.go
internal/pkg/config/: loader.go  model.go
internal/pkg/metadata/: metadata_test.go  metadb.go  record.go  record_test.go  store.go
internal/pkg/metadata/datastore/: datastore.go  datastore_test.go
internal/pkg/metadb/: blob.go  blob_test.go  cursor.go  cursor_test.go  error.go  metadb.go  metadb_test.go  multierror.go  record.go  record_test.go  store.go  store_test.go  timestamps.go  timestamps_test.go  uuid.go
internal/pkg/metadb/blobref/: blobref.go  blobref_test.go  cursor.go  cursor_test.go  status.go  status_test.go
internal/pkg/metadb/blobref/chunkref/: chunkref.go  chunkref_test.go  cursor.go  cursor_test.go
internal/pkg/metadb/checksums/: checksums.go  checksums_test.go  digest.go  digest_test.go
internal/pkg/metadb/checksums/checksumstest/: checksumstest.go  checksumstest_test.go
internal/pkg/metadb/datastore/: cursor.go  cursor_test.go  datastore.go  datastore_test.go  error.go
internal/pkg/metadb/metadbtest/: metadbtest.go  metadbtest_test.go
internal/pkg/metadb/mock/: mock_metadb.go
internal/pkg/metadb/record/: property_map.go  property_map_test.go  property_value.go  property_value_test.go  record.go  record_test.go
internal/pkg/metadb/store/: store.go  store_test.go
internal/pkg/metadb/timestamps/: timestamps.go  timestamps_test.go  uuid.go  uuid_test.go
internal/pkg/metrics/: metric.go  metrics.go
internal/pkg/tracing/: tracing.go
pkg/: BUILD.bazel
scripts/: build-open-saves-builder-base.sh  build-triton-builder-base.sh  build_open_saves_builder_base.sh  cloudbuild.Dockerfile  cloudbuild_builder.yaml  open-saves-builder-base.Dockerfile  open_saves_builder_base.Dockerfile  run_open_saves_test.sh  triton-builder-base.Dockerfile
server/: .gitignore  BUILD.bazel  README.md  WORKSPACE
server/api/: BUILD.bazel  README.md  genswagger.sh  triton.swagger.json
server/examples/demo/: BUILD.bazel
server/examples/grpc-client/: BUILD.bazel
server/internal/app/server/: triton.go
server/pkg/: doc.go
test/load/: README.md
tools/: tools.go
