load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@bazel_gazelle//:def.bzl", "gazelle")

exports_files([
    "LICENSE",
])

buildifier(
    name = "buildifier",
)

# gazelle:prefix github.com/googleforgames/triton
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["doc.go"],
    importpath = "github.com/googleforgames/triton",
    visibility = ["//visibility:public"],
)
