load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@com_github_grpc_grpc//bazel:grpc_build_system.bzl", "grpc_proto_library")
load("@com_github_grpc_ecosystem_grpc_gateway//protoc-gen-swagger:defs.bzl", "protoc_gen_swagger")

package(default_visibility = ["//visibility:public"])

# gazelle:go_grpc_compilers @io_bazel_rules_go//proto:go_grpc, @com_github_grpc_ecosystem_grpc_gateway//protoc-gen-grpc-gateway:go_gen_grpc_gateway

proto_library(
    name = "triton_proto",
    srcs = ["triton.proto"],
    deps = [
        "@com_google_protobuf//:empty_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

cc_proto_library(
    name = "triton_cc_proto",
    deps = [":triton_proto"],
)

cc_grpc_library(
    name = "triton_cc_grpc",
    srcs = ["triton_proto"],
    grpc_only = True,
    deps = [":triton_cc_proto"],
)

go_proto_library(
    name = "triton_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
        "@com_github_grpc_ecosystem_grpc_gateway//protoc-gen-grpc-gateway:go_gen_grpc_gateway",
    ],
    importpath = "github.com/googleforgames/triton",
    proto = ":triton_proto",
    deps = [
        "@com_github_golang_protobuf//descriptor:go_default_library",  # keep
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)

go_library(
    name = "go_default_library",
    embed = [":triton_go_proto"],
    importpath = "github.com/googleforgames/triton",
)

protoc_gen_swagger(
    name = "triton_api_protoc_gen_swagger",
    proto = ":triton_proto",
    single_output = True,
)
