load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

exports_files([
    "LICENSE",
])

# gazelle:prefix github.com/googleforgames/triton
gazelle(
    name = "gazelle",
    prefix = "gihub.com/googleforgames/triton",
)

buildifier(
    name = "buildifier",
)

go_library(
    name = "go_default_library",
    srcs = ["doc.go"],
    importpath = "github.com/googleforgames/triton",
    visibility = ["//visibility:public"],
)
