load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["logging.go"],
    importpath = "github.com/googleforgames/triton/internal/logging",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_tv4_logrus_stackdriver_formatter//:go_default_library",
    ],
)
