load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["create_store.go"],
    importpath = "github.com/googleforgames/triton/examples/grpc-client",
    visibility = ["//visibility:private"],
    deps = [
        "//api:go_default_library",
        "@org_golang_google_api//option:go_default_library",
        "@org_golang_google_api//transport/grpc:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "grpc-client",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
